Работа над главной страницей.

--- a/LolSvlt/LolSvlt.Web/LolSvltTestPage.html
+++ b/LolSvlt/LolSvlt.Web/LolSvltTestPage.html
@@ -8,14 +8,24 @@
 	    height: 100%;
 	    overflow: auto;
     }
-    body {
-	    padding: 0;
-	    margin: 0;
-    }
-    #silverlightControlHost {
-	    height: 100%;
-	    text-align:center;
-    }
+        body {
+            padding: 0;
+            margin: 0;
+            text-align: center;
+        }
+        #wrapper {
+            margin: 0 auto;
+            width: 1024px;
+            height: 768px;
+            position: relative;
+        }
+        #silverlightControlHost {
+            height: 100%;
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            top: 10%;
+        }
     </style>
     <script type="text/javascript" src="Silverlight.js"></script>
     <script type="text/javascript">
@@ -57,25 +67,24 @@
 </head>
 <body>
     <form id="form1" runat="server" style="height:100%">
-    <div id="silverlightControlHost">
-        <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
-		  <param name="source" value="ClientBin/LolSvlt.xap"/>
-		  <param name="onError" value="onSilverlightError" />
-		  <param name="background" value="white" />
-		  <param name="minRuntimeVersion" value="5.0.61118.0" />
-		  <param name="autoUpgrade" value="true" />
-		  <a href="http://go.microsoft.com/fwlink/?LinkID=149156&v=5.0.61118.0" style="text-decoration:none">
- 			  <img src="http://go.microsoft.com/fwlink/?LinkId=161376" alt="Get Microsoft Silverlight" style="border-style:none"/>
-		  </a>
-	    </object>
-        <iframe id="_sl_historyFrame" style="visibility:hidden;height:0px;width:0px;border:0px">
-
-        </iframe>
-        <iframe id="gameFrame" src="" >
-            Ваш браузер не поддерживает плавающие фреймы!
-        </iframe>
-    </div>
-
+        <div id="wrapper">
+            <div id="silverlightControlHost" align="center">
+                <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
+                    <param name="source" value="ClientBin/LolSvlt.xap" />
+                    <param name="onError" value="onSilverlightError" />
+                    <param name="background" value="white" />
+                    <param name="minRuntimeVersion" value="5.0.61118.0" />
+                    <param name="autoUpgrade" value="true" />
+                    <a href="http://go.microsoft.com/fwlink/?LinkID=149156&v=5.0.61118.0" style="text-decoration:none">
+                        <img src="http://go.microsoft.com/fwlink/?LinkId=161376" alt="Get Microsoft Silverlight" style="border-style:none" />
+                    </a>
+                </object>
+                <iframe id="_sl_historyFrame" style="visibility:hidden;height:0px;width:0px;border:0px"></iframe>
+                <iframe id="gameFrame" src="" style="visibility:hidden;height:0px;width:0px;border:0px">
+                    Ваш браузер не поддерживает плавающие фреймы!
+                </iframe>
+            </div>
+        </div>
      
     </form>
 </body>
